--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TeamApp">
+        <activity android:name=".SearchResults"></activity>
+        <activity android:name=".Profile" />
+        <activity android:name=".NewGoals" />
+        <activity android:name=".GoalsPage" />
+        <activity android:name=".SerachPage" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
