refactor name, API progress

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.teamapp">
+    package="com.example.OkayFoods">
 
     <application
         android:allowBackup="true"
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TeamApp">
-        <activity android:name=".SearchResults"></activity>
+        <activity android:name="com.example.OkayFoods.SearchResults"></activity>
         <activity android:name=".Profile" />
         <activity android:name=".NewGoals" />
-        <activity android:name=".GoalsPage" />
-        <activity android:name=".SerachPage" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.OkayFoods.GoalsPage" />
+        <activity android:name="com.example.OkayFoods.SearchPage" />
+        <activity android:name="com.example.OkayFoods.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,5 +22,6 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
