--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     testImplementation project(":volley")
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 
 }
