--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.OkayFoods">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,12 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TeamApp">
-        <activity android:name="com.example.OkayFoods.SearchResults"></activity>
+        <activity android:name=".EditGoals"></activity>
+        <activity android:name=".SearchResults" />
         <activity android:name=".Profile" />
         <activity android:name=".NewGoals" />
-        <activity android:name="com.example.OkayFoods.GoalsPage" />
-        <activity android:name="com.example.OkayFoods.SearchPage" />
-        <activity android:name="com.example.OkayFoods.MainActivity">
+        <activity android:name=".GoalsPage" />
+        <activity android:name=".SearchPage" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,6 +25,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
